# kit-skill

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: github_setup.md  prd.md  rfc.md  test.md  working.md
scripts/: kit-broadcast
skills/: skill_kit.md
src/kit_skill/: __init__.py  broadcast.py  cli.py  client.py  config.py  markdown_render.py
tests/: test_analytics.py  test_broadcast.py  test_cli.py
